<resources>
    <string name="app_name">FilmFighter</string>
    <string name="film_fighter">Fight against your friends to pick the movie</string>
    <string name="host_game">Host Game</string>
    <string name="join_game">Join Game</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchbar_hint">Search a movie title</string>
    <string name="title">Title:</string>
    <string name="release">Release Date:</string>
    <string name="average_vote">Average Vote:</string>
    <string name="genres">Genres:</string>
    <string name="your_name">Your name:</string>
    <string name="start_game">Start Game</string>
    <string name="confirm_name">Confirm name</string>
    <string name="your_movie">Your Movie:</string>
    <string name="username">Username</string>
    <string name="points">Points:</string>
    <string name="movie">Movie:</string>
    <string name="end_game">End Game</string>
    <string name="index">%d/5</string>
</resources>