<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="roomHostFragment"
            type="com.example.filmfighter.RoomHost" />

        <variable
            name="viewModel"
            type="com.example.filmfighter.model.ViewModel" />

        <variable
            name="movie"
            type="com.example.filmfighter.network.Movie" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RoomHost">

        <TextView
            android:id="@+id/your_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/your_name"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/name_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="@id/your_name"
            app:layout_constraintTop_toBottomOf="@id/your_name">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/name_text_view"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:hint="@string/username"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:inputType="textPersonName"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="AngeloffTheWall0000"
                    android:autofillHints="username" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_name"
                    style="@style/Widget.Material3.Button.IconButton.Filled"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/confirm_name"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/baseline_done_24"
                    app:iconGravity="textEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_game_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/start_game"
            android:textAllCaps="true"
            android:onClick="@{() ->roomHostFragment.startGame()}"
            android:textAppearance="?attr/textAppearanceButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/your_movie"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/your_movie"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_card_view" />

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="@id/your_movie"
            app:layout_constraintTop_toBottomOf="@id/your_movie">


            <TextView
                android:id="@+id/movie_text_view"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{movie.title}"
                android:textColor="?attr/colorPrimary"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="249dp"
                tools:text="Avengers" />
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/start_game_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:fighterData="@{viewModel.fighters}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_card_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>